2011-07-13  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * src/boxset.hpp Boxes can be stored in a container now!

        * src/frozen_pointset.hpp cut the pointset file in 2.

        * src/bits/spatial_range.hpp add the helper functions for ranges as
        well as the view for overlap and enclose ranges.

        * src/pointset.hpp After much of reflexion, I decided that it was
        unnecessary to restrict use of pointset or boxset to a particular set
        of range or neighbor iterator. There are some cases were you need such
        functionality. It's better to allow this rather than have ppl complain
        for the need of writing adaptors. Also it's true that basic users may
        make mistakes, if the tutorial is probably written, they shouldn't
        missuse this or that view. On top of that, it makes design easier.
        Everybody wins.

2011-07-13  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * doc/Doxyfile Add grouped distribution of documentation so has to
	save some documentation hassle.

        * src/bits/spatial_node.hpp removed the @test list documentation
        marker in this file and other. Test list will be rebuilt if it becomes
        useful. It is not useful at the moment.

2011-07-12  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * doc/Doxyfile Fixed some documentation issues over some LaTeX
        formulas. Removed custom header and footer for HTML since generated doc
        may fail between different versions of Doxygen introducing mismatch in
        stylesheets. And added a LaTeX output to the documentation. All in all,
        most changes are to make the documentation directory cleaner and more
        standard with regard to the output generated by Doxygen.

        * src/bits/spatial_range.hpp (spatial): fix compilation issues detected
        with g++4.5, that went through with MSVC9.0.

        * doc/Doxygen added new documentation variables and documentation